# w3copentracing-cpp

./: .gitignore  CMakeLists.txt  README.md  w3copentracing.pc.in
include/w3copentracing/: span_context.h  tracer.h
src/: carrier.cpp  carrier.h  span_context.cpp  tracer.cpp
test/: CMakeLists.txt  carrier.t.cpp  mock_writers.h  span_context.t.cpp  test_span_context.h  tracer.t.cpp
